[package]
name = "cue"
version = "0.2.0"
edition = "2021"
description = "Play categorized audio cues from a sound library"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
rodio = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
directories = "5"
thiserror = "2"
rand = "0.8"
ureq = { version = "2", features = ["json"] }
semver = "1"
flate2 = "1"
tar = "0.4"
